Reverting flicking fix - bizarrely caused scrollbar positioning issues and performance drop in chrome osx (at least)

--- a/www/assets/3/style/base.css
+++ b/www/assets/3/style/base.css
@@ -150,8 +150,6 @@ body {
 		-ms-transform: scale(0.7);
 		-o-transform: scale(0.7);
 		transform: scale(0.7);
-		/* Fixes flickering issue in Chrome */
-		-webkit-backface-visibility: hidden;
 	}
 	.container > header h1 span {
 		display: inline-block;
